--- a/index.html
+++ b/index.html
@@ -7,23 +7,40 @@
 	<meta name="keywords" content="Mrugank Dake, Mrugank">
 	<meta name = "description" content="....">
 	<title> Mrugank Dake </title>
-	<style>
-		img {
-		width: 50px;
-		border-radius: 25px;
-		float: left;
-		margin-right: 10px;
-		}
-		p.username {
-		font-weight: bold;
-		}
-	</style>
+	<link rel = "stylesheet" href = "style.css">
 </head>
+
+
 		
 		
 <body>
-	<img src = "img/Mrugank.jpg" alt = "My display picture">
-	<p class = "username"> Mrugank Dake </p>
-	<p> Biography goes here </p>
+	<div class = "container">
+		<div class = "menu">
+			<ul>
+				<li> About </li>
+				<li> Blog </li>
+				<li> Posters and Publications </li>
+				<li> Contact </li>
+			</ul>
+		</div>
+	</div>
+
+
+	
+	<div class = "banner">
+		<div class = "display-picture">
+			<img src = "img/Mrugank.jpg">
+		</div>
+		
+		<div class = "about-text">	
+			<h1> About Me </h1>
+			<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University with Professor Clayton Curtis working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
+			<p>I have completed by Bachelors and Masters Dual Degree from the Indian Institute of Science Education and Research (IISER) Tirupati in 2021. I have worked on a range of topics throughout my undergraduate in domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+			<p> When not working with data, I love playing Chess, taking long walks and drinking coffee. </p>
+		</div>
+	</div>
+
+
 </body>
+
 </html>
