--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class = "about-text">	
 			<h1> About Me </h1>
 			<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University with Professor Clayton Curtis working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
-			<p>I have completed by Bachelors and Masters Dual Degree from the Indian Institute of Science Education and Research (IISER) Tirupati in 2021. I have worked on a range of topics throughout my undergraduate in domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+			<p>I have completed my Bachelors and Masters Dual Degree from the Indian Institute of Science Education and Research (IISER) Tirupati in 2021. I have worked on a range of topics in domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
 			<p> When not working with data, I love playing Chess, taking long walks and drinking coffee. </p>
 		</div>
 	</div>
