--- a/index.html
+++ b/index.html
@@ -4,43 +4,51 @@
 <head>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="Mrugank Dake, Mrugank">
-	<meta name = "description" content="....">
+	<meta name="keywords" content="mrugank dake, mrugank, dake, phd student, iisertirupati, iiser, nyu, iiser tirupati">
 	<title> Mrugank Dake </title>
 	<link rel = "stylesheet" href = "style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
+
 </head>
 
-
-		
-		
 <body>
-	<div class = "container">
-		<div class = "menu">
-			<ul>
-				<li> About </li>
-				<li> Blog </li>
-				<li> Posters and Publications </li>
-				<li> Contact </li>
-			</ul>
-		</div>
-	</div>
+	<button class="tablink" onclick="openPage('about_me', this, 'rgba(255, 0, 0, 0.6)')" id="defaultOpen">About</button>
+	<button class="tablink" onclick="openPage('contact', this, 'green')">Contact</button>
 
+	<section id = "about_me" class = 'tabcontent'>
+		<img id = 'author_img' src = "img/Mrugank.jpg" alt="Mrugank Dake display picture">
 
-	
-	<div class = "banner">
-		<div class = "display-picture">
-			<img src = "img/Mrugank.jpg">
-		</div>
-		
-		<div class = "about-text">	
-			<h1> About Me </h1>
-			<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University with Professor Clayton Curtis working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
-			<p>I have completed my Bachelors and Masters Dual Degree from the Indian Institute of Science Education and Research (IISER) Tirupati in 2021. I have worked on a range of topics in domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
-			<p> When not working with data, I love playing Chess, taking long walks and drinking coffee. </p>
-		</div>
-	</div>
+		<h1> About Me </h1>
+		<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University in <a href="https://www.clayspacelab.com/lab">Clayspace Lab</a> working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
+		<br>
+		<p>I have completed my Bachelors and Masters Dual Degree from the <a href="http://www.iisertirupati.ac.in/">Indian Institute of Science Education and Research (IISER) Tirupati</a> in 2021. I have worked on a range of topics in the domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+		<br>
+		<p> When not working with data, I love playing Chess, travelling and drinking coffee. </p>
+	</section>
 
+	<section id = "contact" class = 'tabcontent'>
+		<h1> Contact Me </h1>
+		<p> <a href = "mrugank.dake@nyu.edu">Email me</a></p>
+	</section>
 
+	<script>
+	function openPage(pageName,elmnt,color) {
+	  var i, tabcontent, tablinks;
+	  tabcontent = document.getElementsByClassName("tabcontent");
+	  for (i = 0; i < tabcontent.length; i++) {
+	    tabcontent[i].style.display = "none";
+	  }
+	  tablinks = document.getElementsByClassName("tablink");
+	  for (i = 0; i < tablinks.length; i++) {
+	    tablinks[i].style.backgroundColor = "";
+	  }
+	  document.getElementById(pageName).style.display = "block";
+	  elmnt.style.backgroundColor = color;
+	}
+
+	// Get the element with id="defaultOpen" and click on it
+	document.getElementById("defaultOpen").click();
+	</script>
 </body>
 
 </html>
