--- a/index.html
+++ b/index.html
@@ -8,26 +8,39 @@
 	<title> Mrugank Dake </title>
 	<link rel = "stylesheet" href = "style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
+	<!-- Add icon library -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 <body>
-	<button class="tablink" onclick="openPage('about_me', this, 'rgba(255, 0, 0, 0.6)')" id="defaultOpen">About</button>
-	<button class="tablink" onclick="openPage('contact', this, 'green')">Contact</button>
+	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
+	<button class="tablink" onclick="openPage('research', this)">Experience</button>
+	<button class="tablink" onclick="openPage('pubs', this)">Publications</button>
+	<button class="tablink" onclick="openPage('contact', this)">Contact</button>
 
 	<section id = "about_me" class = 'tabcontent'>
 		<img id = 'author_img' src = "img/Mrugank.jpg" alt="Mrugank Dake display picture">
 
 		<h1> About Me </h1>
-		<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University in <a href="https://www.clayspacelab.com/lab">Clayspace Lab</a> working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
-		<br>
-		<p>I have completed my Bachelors and Masters Dual Degree from the <a href="http://www.iisertirupati.ac.in/">Indian Institute of Science Education and Research (IISER) Tirupati</a> in 2021. I have worked on a range of topics in the domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
-		<br>
+		<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a> working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
+		<p>I have completed my Bachelors and Masters Dual Degree from the <a href="http://www.iisertirupati.ac.in/" target="_blank">Indian Institute of Science Education and Research (IISER) Tirupati</a> in 2021. I have worked on a range of topics in the domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
 		<p> When not working with data, I love playing Chess, travelling and drinking coffee. </p>
+	</section>
+
+	<section id = "research" class = 'tabcontent'>
+		<h1> Research Experience </h1>
+		<p> Under Construction!</p>
+	</section>
+
+	<section id = "pubs" class = 'tabcontent'>
+		<h1> Publications </h1>
+		<p> Out for fetching ...</p>
 	</section>
 
 	<section id = "contact" class = 'tabcontent'>
 		<h1> Contact Me </h1>
+		<p> Reach out to me @ </p>
 		<p> <a href = "mrugank.dake@nyu.edu">Email me</a></p>
 	</section>
 
