--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<section id = "research" class = 'tabcontent'>
 		<h1> Research Experience </h1>
-		<p> Under Construction!</p>
+		<embed src="cv/resume.pdf" type="application/pdf" width="100%" height="600px" />
 	</section>
 
 	<section id = "pubs" class = 'tabcontent'>
@@ -41,8 +41,14 @@
 	<section id = "contact" class = 'tabcontent'>
 		<h1> Contact Me </h1>
 		<p> Reach out to me @ </p>
-		<p> <a href = "mrugank.dake@nyu.edu">Email me</a></p>
+		<p id = "links">
+		<a href = "mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
+		<a href="https://www.linkedin.com/in/mrugank-dake-71911113b/" class="fa fa-linkedin" target="_blank"></a>
+		<a href="https://twitter.com/IamMrugank" class="fa fa-twitter" target="_blank"></a>
+		<a href="https://www.facebook.com/mrugank.dake19/" class="fa fa-facebook" target="_blank"></a>
+		</p>
 	</section>
+
 
 	<script src = 'button.js'></script>
 </body>
