--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
 	<button class="tablink" onclick="openPage('contact', this)">Contact</button>
 
 	<section id = "about_me" class = 'tabcontent'>
-		<img id = 'author_img' src = "img/Mrugank.jpg" alt="Mrugank Dake display picture">
+		<img id = 'author_img' src = "img/Mrugank3.jpg" alt="Mrugank Dake display picture">
 
 		<h1> About Me </h1>
-		<p> Hi, I am Mrugank Dake and I am currently doing my PhD at New York University in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a> working on the Neuroscience of Learning and Memory. My research interests involve understanding the higher cognitive processes using large-scale data analysis, machine learning and neural networks.</p>
-		<p>I have completed my Bachelors and Masters Dual Degree from the <a href="http://www.iisertirupati.ac.in/" target="_blank">Indian Institute of Science Education and Research (IISER) Tirupati</a> in 2021. I have worked on a range of topics in the domains of Synthetic biology, Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
-		<p> When not working with data, I love playing Chess, travelling and drinking coffee. </p>
+		<p> Hi, I am Mrugank Dake and I am doing my PhD at
+			<a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>
+			 in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a>
+			 working on understanding the role of visual cortex in working memory.</p>
+		<p>I have completed my Bachelors and Masters Dual Degree from the
+			<a href="http://www.iisertirupati.ac.in/" target="_blank">Indian
+				Institute of Science Education and Research (IISER) Tirupati</a> in 2021.
+				 I have worked on a range of topics in the domains of Synthetic biology,
+				 Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+		<p> When not having my nth cup of coffee or working with data, I love playing Chess,
+			 travelling and reading books. </p>
 	</section>
 
 	<section id = "research" class = 'tabcontent'>
@@ -37,11 +45,11 @@
 
 	<section id = "pubs" class = 'tabcontent'>
 		<h1> Publications </h1>
-		<p> Out for fetching ...</p>
+		<p> Out fetching ...</p>
 	</section>
 
 	<section id = "contact" class = 'tabcontent'>
-		<h1> Contact Me </h1>
+		<h1> Contact </h1>
 		<p> Reach out to me @ </p>
 		<p id = "links">
 		<a href = "mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
