twitter handle updated

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 		<p id = "links">
 		<a href = "mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
 		<a href="https://www.linkedin.com/in/mrugank-dake-71911113b/" class="fa fa-linkedin" target="_blank"></a>
-		<a href="https://twitter.com/IamMrugank" class="fa fa-twitter" target="_blank"></a>
-		<a href="https://www.facebook.com/mrugank.dake19/" class="fa fa-facebook" target="_blank"></a>
+		<a href="https://twitter.com/the_memory_guy" class="fa fa-twitter" target="_blank"></a>
 		</p>
 	</section>
 
