--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="mrugank dake, mrugank, dake, phd student, iisertirupati, iiser, nyu, iiser tirupati">
 	<title> Mrugank Dake </title>
+	<link rel="icon" href="img/Logo.png">
 	<link rel = "stylesheet" href = "style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|Poppins">
 	<!-- Add icon library -->
@@ -19,6 +20,7 @@
 	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
 	<button class="tablink" onclick="openPage('research', this)">Experience</button>
 	<button class="tablink" onclick="openPage('pubs', this)">Publications</button>
+	<button class="tablink" onclick="openPage('blogs', this)">Blog</button>
 	<button class="tablink" onclick="openPage('contact', this)">Contact</button>
 
 	<section id = "about_me" class = 'tabcontent'>
@@ -45,6 +47,11 @@
 
 	<section id = "pubs" class = 'tabcontent'>
 		<h1> Publications </h1>
+		<p> Out fetching ...</p>
+	</section>
+
+	<section id = "blogs" class = 'tabcontent'>
+		<h1> Blog </h1>
 		<p> Out fetching ...</p>
 	</section>
 
