suppressed blog tab

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
 	<button class="tablink" onclick="openPage('research', this)">Experience</button>
 	<button class="tablink" onclick="openPage('pubs', this)">Publications</button>
-	<button class="tablink" onclick="openPage('blogs', this)">Blog</button>
+	<!---<button class="tablink" onclick="openPage('blogs', this)">Blog</button>-->
 	<button class="tablink" onclick="openPage('contact', this)">Contact</button>
 
 	<section id = "about_me" class = 'tabcontent'>
@@ -50,10 +50,10 @@
 		<p> Out fetching ...</p>
 	</section>
 
-	<section id = "blogs" class = 'tabcontent'>
+	<!---<section id = "blogs" class = 'tabcontent'>
 		<h1> Blog </h1>
 		<p> Out fetching ...</p>
-	</section>
+	</section>-->
 
 	<section id = "contact" class = 'tabcontent'>
 		<h1> Contact </h1>
