--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang = "en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDGW66XGW9"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-FDGW66XGW9');
+	</script>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="mrugank dake, mrugank, dake, phd student, iisertirupati, iiser, nyu, iiser tirupati">
