--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html lang = "en">
 
 <head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-FDGW66XGW9"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-FDGW66XGW9');
-	</script>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="mrugank dake, mrugank, dake, phd student, iisertirupati, iiser, nyu, iiser tirupati">
@@ -24,6 +15,16 @@
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0HX17JJJ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y0HX17JJJ2');
+</script>
+
 
 <body>
 	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
