--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0HX17JJJ2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y0HX17JJJ2');
+</script>
+
 <body>
 	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
 	<button class="tablink" onclick="openPage('research', this)">Experience</button>
