--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
-
+<html lang="en">
 <head>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +14,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 
 </head>
-
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0HX17JJJ2"></script>
 <script>
@@ -27,56 +25,44 @@
 </script>
 
 <body>
-	<button class="tablink" onclick="openPage('about_me', this)" id="defaultOpen">About</button>
-	<button class="tablink" onclick="openPage('research', this)">Experience</button>
-	<button class="tablink" onclick="openPage('pubs', this)">Publications</button>
-	<!---<button class="tablink" onclick="openPage('blogs', this)">Blog</button>-->
-	<button class="tablink" onclick="openPage('contact', this)">Contact</button>
-
-	<section id = "about_me" class = 'tabcontent'>
-		<img id = 'author_img' src = "img/Mrugank0.jpg" alt="Mrugank Dake display picture">
-
-		<h1> About Me </h1>
-		<p> Hi, I am Mrugank Dake and I am doing my PhD at
-			<a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>
-			 in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a>
-			 working on understanding the role of visual cortex in working memory.</p>
-		<p>I have completed my Bachelors and Masters Dual Degree from the
-			<a href="http://www.iisertirupati.ac.in/" target="_blank">Indian
-				Institute of Science Education and Research (IISER) Tirupati</a> in 2021.
-				 I have worked on a range of topics in the domains of Synthetic biology,
-				 Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
-		<p> When not having my nth cup of coffee or working with data, I love playing Chess,
-			 travelling and reading books. </p>
-	</section>
-
-	<section id = "research" class = 'tabcontent'>
-		<h1> Research Experience </h1>
-		<embed src="cv/resume.pdf" type="application/pdf" width="100%" height="600px" />
-	</section>
-
-	<section id = "pubs" class = 'tabcontent'>
-		<h1> Publications </h1>
-		<p> Out fetching ...</p>
-	</section>
-
-	<!---<section id = "blogs" class = 'tabcontent'>
-		<h1> Blog </h1>
-		<p> Out fetching ...</p>
-	</section>-->
-
-	<section id = "contact" class = 'tabcontent'>
-		<h1> Contact </h1>
-		<p> Reach out to me @ </p>
-		<p id = "links">
-		<a href = "mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/mrugank-dake-71911113b/" class="fa fa-linkedin" target="_blank"></a>
-		<a href="https://twitter.com/the_memory_guy" class="fa fa-twitter" target="_blank"></a>
-		</p>
-	</section>
-
-
-	<script src = 'button.js'></script>
+    <div id="sidebar">
+		<img id="author_img" src="img/Mrugank0.jpg" alt="Mrugank Dake display picture">
+        <ul>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#publications">Publications and Posters</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+		<div id="social-links">
+            <a href="mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/mrugank-dake-71911113b/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://twitter.com/the_memory_guy" class="fa fa-twitter" target="_blank"></a>
+			<a href="https://github.com/mindemory" class="fa fa-github" target="_blank"></a>
+        </div>
+    </div>
+    <div id="content">
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p> Hi, I am Mrugank Dake and I am doing my PhD at
+				<a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>
+				 in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a>
+				 working on understanding the role of visual cortex in working memory.</p>
+			<p>I have completed my Bachelors and Masters Dual Degree from the
+				<a href="http://www.iisertirupati.ac.in/" target="_blank">Indian
+					Institute of Science Education and Research (IISER) Tirupati</a> in 2021.
+					 I have worked on a range of topics in the domains of Synthetic biology,
+					 Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+			<p> When not having my nth cup of coffee or working with data, I love playing Chess,
+				 travelling and reading books. </p>
+			<p>Check out my <a href="cv/resume.pdf" target="_blank">CV</a> for more details.</p>
+        </section>
+        <section id="publications">
+            <h2>Publications and Posters</h2>
+            <ul> 
+				<li>CoCa coli probiotic immunotherapy against colon cancer; iGEM 2019 </li>
+				<p> We genetically engineered <i>E. coli</i> to express lactate operon that has GFP as a reporter. This helped us develop a lactate concentration sensitive bacterial culture.</p>
+			</ul>
+        </section>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
