--- a/index.html
+++ b/index.html
@@ -42,24 +42,32 @@
     <div id="content">
         <section id="about-me">
             <h2>About Me</h2>
-            <p> Hi, I am Mrugank Dake and I am doing my PhD at
-				<a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>
-				 in <a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a>
-				 working on understanding the role of visual cortex in working memory.</p>
-			<p>I have completed my Bachelors and Masters Dual Degree from the
+            <p> Hi, I am Mrugank Dake and I am a graduate student at
+				<a href="https://www.clayspacelab.com/lab" target="_blank">Clayspace Lab</a>, <a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>
+				working on understanding the role of distributed representation in working memory. I am broadly interested in how memories are represented in the brain. </p>
+			<p>Prior to this, I completed my Bachelors and Masters dual degree from the
 				<a href="http://www.iisertirupati.ac.in/" target="_blank">Indian
-					Institute of Science Education and Research (IISER) Tirupati</a> in 2021.
-					 I have worked on a range of topics in the domains of Synthetic biology,
-					 Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
+					Institute of Science Education and Research (IISER) Tirupati</a> in 2021 with a major in Biology and a minor in Physics.
+					During this period, I have worked on a range of topics in the domains of Synthetic biology,
+					Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
 			<p> When not having my nth cup of coffee or working with data, I love playing Chess,
 				 travelling and reading books. </p>
-			<p>Check out my <a href="cv/resume.pdf" target="_blank">CV</a> for more details.</p>
+			<p>Check out my <a href="docs/resume.pdf" target="_blank">CV</a> for more details.</p>
         </section>
         <section id="publications">
             <h2>Publications and Posters</h2>
             <ul> 
-				<li>CoCa coli probiotic immunotherapy against colon cancer; iGEM 2019 </li>
-				<p> We genetically engineered <i>E. coli</i> to express lactate operon that has GFP as a reporter. This helped us develop a lactate concentration sensitive bacterial culture.</p>
+				<li><b>CoCa coli: Probiotic immunotherapy against colon cancer; iGEM 2019 </b></li> <a href="docs/igem_poster.pdf" target="_blank">Poster Link</a>
+				<p> One of the major concerns with cancer treatment is the use of often invasive and unnatural therapeutic approaches.
+					Cancer cells, owing to their high metabolic activity, resort to Warburg metabolism, thereby producing enormous amounts of lactate in their vicinity.
+					We employed this flaw to produce genetically engineered <i>E. coli</i> to express lactate operon. Using proof-of-concent GFP reporter, we managed to 
+					optimize the lactate operon to be able to distinguish lactate concentrations observed in colon cancer tissues from healthy tissues.
+					Additionally, we also expressed secretable IL-12 in these bacteria. The goal was to induce IL-12 secretion when the "probiotic" is in
+					the vicinity of cancerous tissue. IL-12 is naturally suppressed around cancerous cells thereby making them invisible to the immune system.
+					Additionally, in order to ensure specificity, we modified the FimH operon to express fimbriae that can specifically bind to colorectal cancer cells.
+					This work was proof of concept with individual entities completed. We also provided a fluid dynamics model to help estimate the dosage of probiotic
+					necessary to ensure efficient binding and degradation of the colorectal cancer mass.
+				</p>
 			</ul>
         </section>
     </div>
