--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					During this period, I have worked on a range of topics in the domains of Synthetic biology,
 					Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
 			<p> When not having my nth cup of coffee or working with data, I love playing Chess,
-				 travelling and reading books. </p>
+				 traveling and reading books. </p>
 			<p>Check out my <a href="docs/resume.pdf" target="_blank">CV</a> for more details.</p>
         </section>
         <section id="publications">
