--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 					Institute of Science Education and Research (IISER) Tirupati</a> in 2021 with a major in Biology and a minor in Physics.
 					During this period, I have worked on a range of topics in the domains of Synthetic biology,
 					Cancer, Neurobiology, Computational Neuroscience, Ecoacoustics and Machine Learning. </p>
-			<p> When not having my nth cup of coffee or working with data, I love playing Chess,
-				 traveling and reading books. </p>
+			<p> When not having my nth cup of coffee or working with data, you can find me playing chess, biking, hiking, or my new found interest in learning guitar. </p>
 			<p>Check out my <a href="docs/resume.pdf" target="_blank">CV</a> for more details.</p>
         </section>
         <section id="publications">
