added posters, changed display picture and updated layout a bit

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 <body>
     <div id="sidebar">
-		<img id="author_img" src="img/Mrugank2.jpg" alt="Mrugank Dake display picture">
+		<img id="author_img" src="img/Mrugank7.jpeg" alt="Mrugank Dake display picture">
         <ul>
             <li><a href="#about-me">About Me</a></li>
-            <li><a href="#publications">Publications and Posters</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#research">Research</a></li>
+			
         </ul>
 		<div id="social-links">
             <a href="mailto:mrugank.dake@nyu.edu" class="fa fa-envelope" target="_blank"></a>
@@ -53,21 +53,33 @@
 			<p> When not having my nth cup of coffee or working with data, you can find me playing chess, biking, hiking, or my new found interest in learning guitar. </p>
 			<p>Check out my <a href="docs/resume.pdf" target="_blank">CV</a> for more details.</p>
         </section>
-        <section id="publications">
-            <h2>Publications and Posters</h2>
-            <ul> 
-				<li><b>CoCa coli: Probiotic immunotherapy against colon cancer; iGEM 2019 </b></li> <a href="docs/igem_poster.pdf" target="_blank">Poster Link</a>
-				<p> One of the major concerns with cancer treatment is the use of often invasive and unnatural therapeutic approaches.
-					Cancer cells, owing to their high metabolic activity, resort to Warburg metabolism, thereby producing enormous amounts of lactate in their vicinity.
-					We employed this flaw to produce genetically engineered <i>E. coli</i> to express lactate operon. Using proof-of-concent GFP reporter, we managed to 
-					optimize the lactate operon to be able to distinguish lactate concentrations observed in colon cancer tissues from healthy tissues.
-					Additionally, we also expressed secretable IL-12 in these bacteria. The goal was to induce IL-12 secretion when the "probiotic" is in
-					the vicinity of cancerous tissue. IL-12 is naturally suppressed around cancerous cells thereby making them invisible to the immune system.
-					Additionally, in order to ensure specificity, we modified the FimH operon to express fimbriae that can specifically bind to colorectal cancer cells.
-					This work was proof of concept with individual entities completed. We also provided a fluid dynamics model to help estimate the dosage of probiotic
-					necessary to ensure efficient binding and degradation of the colorectal cancer mass.
-				</p>
-			</ul>
+        <section id="research">
+            <h2>Research</h2>
+			<h3>Publications</h3>
+			<p>
+				<b><u>Dake M.</u></b>, Rajamani N. (in prep). Inter and intra species similarities and differences using acoustic analysis of
+<i>Funambulus </i> squirrels of the Indian subcontinent.
+			</p>
+			<p>
+				<b><u>Dake M.</u></b>, Curtis C. E. (2024). Perturbing human V1 degrades the fidelity of visual working memory. <i>bioRxiv</i>
+
+			</p>
+
+			<h3>Posters</h3>
+			<p>
+				<b><u>Dake M.</u></b>, Curtis C. E. Do perturbations to visual cortex impact working memory?; In <i>Society for Neuroscience (SfN),
+Washington D.C.</i>, USA (2023) <a href="docs/Dake_SfN2023_poster.pdf" target="_blank">View Poster</a>
+			</p>
+			<p>
+				Khare S., Chopra S., Grover H., Vohra T., Mahmood U., Jatwani K., Kaushik D., Pandey A., Bhardwaj S., Tanwar A.,
+Singh J., Shekhar C., <b><u>Dake M.</u></b>, Krishnamoorthy K., Kumar K.; Li-Koff: To Detect and Degrade N-Nitrosamines;
+In <i>Giant Jamboree (iGEM), Boston</i>, USA (2020) 
+			</p>
+			<p>
+				Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N., <b><u>Dake M.</u></b>, Khatri U., Krishna N., Jacob M.,
+Mal S., Mohapatra O., Pal A., Saha D., Tripathy B., Mukherjee R., Rao B.J.; CoCa coli: probiotic immunotherapy
+against colon cancer; In <i>Giant Jamboree (iGEM), Boston</i>, USA (2019) <a href="docs/igem_poster.pdf" target="_blank">View Poster</a>
+			</p>
         </section>
     </div>
     <script src="script.js"></script>
