added faridabad poster and changed background for sidebar footer

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Washington D.C.</i>, USA (2023) <a href="docs/Dake_SfN2023_poster.pdf" target="_
 			<p>
 				Khare S., Chopra S., Grover H., Vohra T., Mahmood U., Jatwani K., Kaushik D., Pandey A., Bhardwaj S., Tanwar A.,
 Singh J., Shekhar C., <b><u>Dake M.</u></b>, Krishnamoorthy K., Kumar K.; Li-Koff: To Detect and Degrade N-Nitrosamines;
-In <i>Giant Jamboree (iGEM), Boston</i>, USA (2020) 
+In <i>Giant Jamboree (iGEM), Boston</i>, USA (2020) <a href="https://2020.igem.org/Team:MRIIRS_FARIDABAD/Poster" target="_blank">View Poster</a>
 			</p>
 			<p>
 				Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N., <b><u>Dake M.</u></b>, Khatri U., Krishna N., Jacob M.,
