--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <i>Funambulus </i> squirrels of the Indian subcontinent.
 			</p>
 			<p>
-				<b><u>Dake M.</u></b>, Curtis C. E. (2024). Perturbing human V1 degrades the fidelity of visual working memory. <i>bioRxiv</i>
+				<b><u>Dake M.</u></b>, Curtis C. E. (2024). Perturbing human V1 degrades the fidelity of visual working memory. <i><a href="https://www.biorxiv.org/content/10.1101/2024.06.19.599798v1" target="_blank">bioRxiv</a></i>
 
 			</p>
 
