updating profile pic

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <div id="sidebar">
-		<img id="author_img" src="img/Mrugank7.jpeg" alt="Mrugank Dake display picture">
+		<img id="author_img" src="img/Mrugank2.jpg" alt="Mrugank Dake display picture">
         <ul>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#research">Research</a></li>
