--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ In <i>Giant Jamboree (iGEM), Boston</i>, USA (2020) <a href="https://2020.igem.o
 Mal S., Mohapatra O., Pal A., Saha D., Tripathy B., Mukherjee R., Rao B.J.; CoCa coli: probiotic immunotherapy
 against colon cancer; In <i>Giant Jamboree (iGEM), Boston</i>, USA (2019) <a href="docs/igem_poster.pdf" target="_blank">View Poster</a>
 			</p>
+
+			<h3>Talks & Symposia</h3>
+			<p>
+				<b><u>Dake M.</u></b>, Curtis C. E.. Perturbing human V1 degrades the fidelity of visual working memory; In <i>Working Memory Symposium (WMS) (Virtual)</i> (2024)
+			</p>
         </section>
     </div>
     <script src="script.js"></script>
