--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <h2>Research</h2>
 			<h3>Publications</h3>
 			<p>
-				<b><u>Dake M.</u></b>, Rajamani N. (in prep). Inter and intra species similarities and differences using acoustic analysis of
+				<b><u>Dake M.</u></b>, Rajamani N. (<i>in prep</i>). Inter and intra species similarities and differences using acoustic analysis of
 <i>Funambulus </i> squirrels of the Indian subcontinent.
 			</p>
 			<p>
-				<b><u>Dake M.</u></b>, Curtis C. E. (2024). Perturbing human V1 degrades the fidelity of visual working memory. <i><a href="https://www.biorxiv.org/content/10.1101/2024.06.19.599798v1" target="_blank">bioRxiv</a></i>
+				<b><u>Dake M.</u></b>, Curtis C. E. (<i>in press</i>). Perturbing human V1 degrades the fidelity of visual working memory. <i><a href="https://www.biorxiv.org/content/10.1101/2024.06.19.599798v1" target="_blank">Nature Communications</a></i>
 
 			</p>
 
