--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <i>Funambulus </i> squirrels of the Indian subcontinent.
 			</p>
 			<p>
-				<b><u>Dake M.</u></b>, Curtis C. E. (<i>in press</i>). Perturbing human V1 degrades the fidelity of visual working memory. <i><a href="https://www.biorxiv.org/content/10.1101/2024.06.19.599798v2.full.pdf" target="_blank">Nature Communications</a></i>
+				<b><u>Dake M.</u></b>, Curtis C. E. (<i>in press</i>). Perturbing human V1 degrades the fidelity of visual working memory. <i><a href="https://www.nature.com/articles/s41467-025-57882-8" target="_blank">Nature Communications</a></i>
 
 			</p>
 
