minor status update

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 				In particular, I use multimodal neuroimaging methods (MEG, EEG, fMRI, ECoG, TMS) to understand how distributed neural populations bring about the representation and transformation of information in working memory.
 			</p>
 		
+			<p>
+				I am currently a Data Science Intern at <a href="https://tech.facebook.com/reality-labs/" target="_blank">Meta Reality Labs</a>, where I work on state-of-the-art Quest VR technology.
+			</p>
+		
 			<p>My journey into neuroscience began over a decade ago with the BrainBee competition in India, where a chapter on memory in the <a href="https://www.brainfacts.org/" target="_blank">BrainFacts</a> book sparked a lifelong fascination. 
 			   That early interest evolved into an academic path aimed at understanding how information is represented in biological systems, both with and without brains.
 			</p>
