--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
 		<img id="author_img" src="img/Mrugank8.jpg" alt="Mrugank Dake display picture">
         <h1>Mrugank Dake</h1>
-        <p>PhD Student in Neuroscience<br>NYU Clayspace Lab</p>
+        <p>PhD Student in Cognition & Perception<br>NYU Clayspace Lab</p>
         
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
