made dark mode default

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
 	<meta charset = "UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +48,7 @@
         
 		<img id="author_img" src="img/Mrugank8.jpg" alt="Mrugank Dake display picture">
         <h1>Mrugank Dake</h1>
-        <p>PhD Student in Cognition & Perception<br>NYU Clayspace Lab</p>
+        <p>PhD Student<br>NYU Cognition & Perception</p>
         
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
