fixed image sizing

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 				<h4>Perturbing human V1 degrades the fidelity of visual working memory</h4>
 				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<a href="https://www.nature.com/articles/s41467-025-57882-8" target="_blank" class="journal-badge">Nature Communications</a>
+				<a href="https://www.futurity.org/working-memory-3283812/" target="_blank" class="press-badge">Press Coverage</a>
 			</div>
 
 			<h3>Posters</h3>
