--- a/index.html
+++ b/index.html
@@ -114,13 +114,26 @@
 			</div>
 
 			<h3>Posters</h3>
+
+			<div class="research-item">
+				<h4>Working memory synchronizes oscillations in visual cortex</h4>
+				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands (2025)</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Dandekar S.,Curtis C. E.</p>
+				<a href="https://2025.ccneuro.org/" target="_blank" class="link">
+					<i class="fas fa-external-link-alt"></i> Upcoming
+				</a>
+				
+			</div>
+
 			<div class="research-item">
 				<h4>Do perturbations to visual cortex impact working memory?</h4>
 				<p class="venue"><i>Society for Neuroscience (SfN), Washington D.C., USA (2023)</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<a href="docs/Dake_SfN2023_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
 				</a>
 			</div>
+			
 			
 			<div class="research-item">
 				<h4>Li-Koff: To Detect and Degrade N-Nitrosamines</h4>
