minor modifs and added date

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 			<p>Hi, I am Mrugank Dake, a neuroscience graduate student at 
 				<a href="https://www.clayspacelab.com/researchteam" target="_blank">Clayspace Lab</a>, 
 				<a href="https://as.nyu.edu/psychology/people/GraduateStudents.html" target="_blank">New York University</a>. 
-				I study how memories are represented in the brain, with a focus on distributed coding and network-level coordination in working memory. 
-				In particular, I use multimodal neuroimaging methods (MEG, EEG, fMRI, ECoG, TMS) to understand how distributed neural populations bring about the representation and transformation of information in working memory.
+				I study how memories are represented in the brain, with a focus on distributed coding and network-level coordination in the context of working memory. 
+				To understand this, I use multimodal neuroimaging methods like MEG, EEG, fMRI, ECoG, TMS, as well as computational approaches ranging from 
+				modeling behavior and neural activity to solving optimization problems over parallel compute and GPU.
 			</p>
 		
 			<p>
@@ -107,7 +108,7 @@
 			<h3>Publications</h3>
 			
 			<div class="publication-card">
-				<h4>Perturbing human V1 degrades the fidelity of visual working memory</h4>
+				<h4>Perturbing human V1 degrades the fidelity of visual working memory <span class="pub-year">2025</span></h4>
 				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<a href="https://www.nature.com/articles/s41467-025-57882-8" target="_blank" class="journal-badge">Nature Communications</a>
 				<a href="https://www.futurity.org/working-memory-3283812/" target="_blank" class="press-badge">Press Coverage</a>
@@ -116,8 +117,8 @@
 			<h3>Posters</h3>
 
 			<div class="research-item">
-				<h4>Working memory synchronizes oscillations in visual cortex</h4>
-				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands (2025)</i></p>
+				<h4>Working memory synchronizes oscillations in visual cortex <span class="pub-year">2025</span></h4>
+				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands</i></p>
 				<p class="authors"><strong>Dake M.</strong>, Dandekar S.,Curtis C. E.</p>
 				<a href="https://2025.ccneuro.org/" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> Upcoming
@@ -126,9 +127,9 @@
 			</div>
 
 			<div class="research-item">
-				<h4>Do perturbations to visual cortex impact working memory?</h4>
-				<p class="venue"><i>Society for Neuroscience (SfN), Washington D.C., USA (2023)</i></p>
+				<h4>Do perturbations to visual cortex impact working memory? <span class="pub-year">2023</span></h4>
 				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
+				<p class="venue"><i>Society for Neuroscience (SfN), Washington D.C., USA</i></p>
 				<a href="docs/Dake_SfN2023_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
 				</a>
@@ -136,8 +137,8 @@
 			
 			
 			<div class="research-item">
-				<h4>Li-Koff: To Detect and Degrade N-Nitrosamines</h4>
-				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA (2020)</i></p>
+				<h4>Li-Koff: To Detect and Degrade N-Nitrosamines <span class="pub-year">2020</span></h4>
+				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA</i></p>
 				<p class="authors">Khare S., Chopra S., Grover H., Vohra T., Mahmood U., Jatwani K., Kaushik D., Pandey A., Bhardwaj S., Tanwar A., Singh J., Shekhar C., <strong>Dake M.</strong>, Krishnamoorthy K., Kumar K.</p>
 				<a href="https://2020.igem.org/Team:MRIIRS_FARIDABAD/Poster" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
@@ -145,8 +146,8 @@
 			</div>
 			
 			<div class="research-item">
-				<h4>CoCa coli: probiotic immunotherapy against colon cancer</h4>
-				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA (2019)</i></p>
+				<h4>CoCa coli: probiotic immunotherapy against colon cancer <span class="pub-year">2019</span></h4>
+				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA</i></p>
 				<p class="authors">Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N., <strong>Dake M.</strong>, Khatri U., Krishna N., Jacob M., Mal S., Mohapatra O., Pal A., Saha D., Tripathy B., Mukherjee R., Rao B.J.</p>
 				<a href="docs/igem_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
@@ -155,8 +156,9 @@
 
 			<h3>Talks & Symposia</h3>
 			<div class="research-item">
-				<h4>Perturbing human V1 degrades the fidelity of visual working memory</h4>
-				<p class="venue"><i>Working Memory Symposium (WMS) (Virtual) (2024)</i></p>
+				<h4>Perturbing human V1 degrades the fidelity of visual working memory <span class="pub-year">2024</span></h4>
+				<p class="venue"><i>Working Memory Symposium (WMS) (Virtual)</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 			</div>
         </section>
     </div>
