--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 			
 			<div class="research-item">
 				<h4>Li-Koff: To Detect and Degrade N-Nitrosamines <span class="pub-year">2020</span></h4>
-				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA</i></p>
+				<p class="venue"><i>International Genetically Engineered Machines (iGEM), Giant Jamboree, Boston, USA</i></p>
 				<p class="authors">Khare S., Chopra S., Grover H., Vohra T., Mahmood U., Jatwani K., Kaushik D., Pandey A., Bhardwaj S., Tanwar A., Singh J., Shekhar C., <strong>Dake M.</strong>, Krishnamoorthy K., Kumar K.</p>
 				<a href="https://2020.igem.org/Team:MRIIRS_FARIDABAD/Poster" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
@@ -147,7 +147,7 @@
 			
 			<div class="research-item">
 				<h4>CoCa coli: probiotic immunotherapy against colon cancer <span class="pub-year">2019</span></h4>
-				<p class="venue"><i>Giant Jamboree (iGEM), Boston, USA</i></p>
+				<p class="venue"><i>International Genetically Engineered Machines (iGEM), Giant Jamboree, Boston, USA</i></p>
 				<p class="authors">Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N., <strong>Dake M.</strong>, Khatri U., Krishna N., Jacob M., Mal S., Mohapatra O., Pal A., Saha D., Tripathy B., Mukherjee R., Rao B.J.</p>
 				<a href="docs/igem_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
