some addition of a blog template

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
+	<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
 </head>
 <!-- Google tag (gtag.js) -->
@@ -53,6 +54,7 @@
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
+            <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li>
         </ul>
 		
 		<div id="social-links">
@@ -128,8 +130,8 @@
 
 			<div class="research-item">
 				<h4>Do perturbations to visual cortex impact working memory? <span class="pub-year">2023</span></h4>
-				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<p class="venue"><i>Society for Neuroscience (SfN), Washington D.C., USA</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<a href="docs/Dake_SfN2023_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-external-link-alt"></i> View Poster
 				</a>
