removing the blog for now

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
-            <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li>
+            <!-- <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li> -->
         </ul>
 		
 		<div id="social-links">
