--- a/mindemory/homepage.html
+++ b/mindemory/homepage.html
@@ -14,7 +14,7 @@
             <div class="blog-header-row">
                 <div class="logo-and-message">
                     <span class="fancy-title">Mindemory</span>
-                    <div class="header-message"><em>Mind & Memory: what shapes who we are</em></div>
+                    <div class="header-message"><em>where mind meets memory: reflections on who we are</em></div>
                 </div>
                 <nav class="blog-nav">
                     <div class="blog-tab open" data-card="about">About</div>
