adding ccn poster form

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
-            <!-- <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li> -->
+            <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li>
         </ul>
 		
 		<div id="social-links">
@@ -121,9 +121,10 @@
 			<div class="research-item">
 				<h4>Working memory synchronizes oscillations in visual cortex <span class="pub-year">2025</span></h4>
 				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands</i></p>
-				<p class="authors"><strong>Dake M.</strong>, Dandekar S.,Curtis C. E.</p>
-				<a href="https://2025.ccneuro.org/" target="_blank" class="link">
-					<i class="fas fa-external-link-alt"></i> Upcoming
+				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
+				<!-- <a href="https://2025.ccneuro.org/" target="_blank" class="link"> -->
+					<!--  <i class="fas fa-external-link-alt"></i> Upcoming -->
+					<a href="ccn2025_posterattendance.html" class="link"> <i class="fas fa-external-link-alt"></i>
 				</a>
 				
 			</div>
