--- a/index.html
+++ b/index.html
@@ -122,11 +122,14 @@
 				<h4>Working memory synchronizes oscillations in visual cortex <span class="pub-year">2025</span></h4>
 				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands</i></p>
 				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
-				<!-- <a href="https://2025.ccneuro.org/" target="_blank" class="link"> -->
-					<!--  <i class="fas fa-external-link-alt"></i> Upcoming -->
-					<a href="ccn2025_posterattendance.html" class="link"> <i class="fas fa-external-link-alt"></i>
-				</a>
-				
+				<div class="poster-links">
+					<a href="docs/CCN2025Poster_MrugankDake.pdf" target="_blank" class="link">
+						<i class="fas fa-file-pdf"></i> View Poster
+					</a>
+					<a href="ccn2025_posterattendance.html" class="link">
+						<i class="fas fa-comment"></i> Contact Form
+					</a>
+				</div>
 			</div>
 
 			<div class="research-item">
