--- a/ccn2025_posterattendance.html
+++ b/ccn2025_posterattendance.html
@@ -9,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Charter:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
+        html, body {
+            background: linear-gradient(135deg, #0f0f23 0%, #1a1a2e 50%, #16213e 100%);
+            color: #e0e0e0;
+            font-family: 'Charter', serif;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+        }
+        
         .poster-container {
             max-width: 1200px;
             margin: 0 auto;
