updating ccn and sfn and adding awards

--- a/index.html
+++ b/index.html
@@ -119,17 +119,20 @@
 			<h3>Posters</h3>
 
 			<div class="research-item">
+				<h4>Working memory synchronizes oscillations within and across cortical areas <span class="pub-year">2025</span></h4>
+				<p class="venue"><i>Society for Neuroscience (SfN), San Diego, CA, USA</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
+				<p class="status-upcoming"><i class="fas fa-clock"></i> Upcoming <span class="award-badge">SfN Trainee Professional Development Award (TPDA)</span></p>
+			</div>
+
+			<div class="research-item">
 				<h4>Working memory synchronizes oscillations in visual cortex <span class="pub-year">2025</span></h4>
 				<p class="venue"><i>Computational Cognitive Neuroscience (CCN), Amsterdam, Netherlands</i></p>
 				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
-				<div class="poster-links">
-					<a href="docs/CCN2025Poster_MrugankDake.pdf" target="_blank" class="link">
-						<i class="fas fa-file-pdf"></i> View Poster
-					</a>
-					<a href="ccn2025_posterattendance.html" class="link">
-						<i class="fas fa-comment"></i> Contact Form
-					</a>
-				</div>
+				<a href="docs/CCN2025Poster_MrugankDake.pdf" target="_blank" class="link">
+					<i class="fas fa-file-pdf"></i> View Poster
+				</a>
+				<span class="award-badge">NYU Dean's Conference Fund</span>
 			</div>
 
 			<div class="research-item">
@@ -137,7 +140,7 @@
 				<p class="venue"><i>Society for Neuroscience (SfN), Washington D.C., USA</i></p>
 				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
 				<a href="docs/Dake_SfN2023_poster.pdf" target="_blank" class="link">
-					<i class="fas fa-external-link-alt"></i> View Poster
+					<i class="fas fa-file-pdf"></i> View Poster
 				</a>
 			</div>
 			
@@ -147,8 +150,9 @@
 				<p class="venue"><i>International Genetically Engineered Machines (iGEM), Giant Jamboree, Boston, USA</i></p>
 				<p class="authors">Khare S., Chopra S., Grover H., Vohra T., Mahmood U., Jatwani K., Kaushik D., Pandey A., Bhardwaj S., Tanwar A., Singh J., Shekhar C., <strong>Dake M.</strong>, Krishnamoorthy K., Kumar K.</p>
 				<a href="https://2020.igem.org/Team:MRIIRS_FARIDABAD/Poster" target="_blank" class="link">
-					<i class="fas fa-external-link-alt"></i> View Poster
+					<i class="fas fa-file-pdf"></i> View Poster
 				</a>
+				<span class="award-badge">DBT India iBEC Award 2020</span>
 			</div>
 			
 			<div class="research-item">
@@ -156,8 +160,9 @@
 				<p class="venue"><i>International Genetically Engineered Machines (iGEM), Giant Jamboree, Boston, USA</i></p>
 				<p class="authors">Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N., <strong>Dake M.</strong>, Khatri U., Krishna N., Jacob M., Mal S., Mohapatra O., Pal A., Saha D., Tripathy B., Mukherjee R., Rao B.J.</p>
 				<a href="docs/igem_poster.pdf" target="_blank" class="link">
-					<i class="fas fa-external-link-alt"></i> View Poster
+					<i class="fas fa-file-pdf"></i> View Poster
 				</a>
+				<span class="award-badge">DBT India iBEC Award 2019</span>
 			</div>
 
 			<h3>Talks & Symposia</h3>
