--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul>
             <li><a href="#about-me" class="nav-link active">About Me</a></li>
             <li><a href="#research" class="nav-link">Research</a></li>
-            <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li>
+            <!-- <li><a href="mindemory/homepage.html" class="nav-link mindemory-highlight mindemory-title-font" target="_blank">Mindemory</a></li> -->
         </ul>
 		
 		<div id="social-links">
@@ -100,7 +100,7 @@
 				I love thoughtful conversations, especially over good coffee, and I am always up for a long walk or a deep dive into a weird idea.
 			</p>
 		
-			<p>Check out my <a href="docs/resume.pdf" target="_blank">CV</a> for more details.</p>
+			<p>Check out my <a href="docs/MrugankDakeCV.pdf" target="_blank">CV</a> for more details.</p>
 		</section>
 		
         
