decluttered some stuff and updated Meta internship timeline

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <i class="fas fa-moon"></i>
         </button>
         
-		<img id="author_img" src="img/Mrugank8.jpg" alt="Mrugank Dake display picture">
+		<img id="author_img" src="img/headshot.jpg" alt="Mrugank Dake display picture">
         <h1>Mrugank Dake</h1>
         <p>PhD Student<br>NYU Cognition & Perception</p>
         
@@ -77,7 +77,7 @@
 			</p>
 		
 			<p>
-				I am currently a Data Science Intern at <a href="https://tech.facebook.com/reality-labs/" target="_blank">Meta Reality Labs</a>, where I work on state-of-the-art Quest VR technology.
+				In Summer of 2025, I had a great opportunity to work as a Data Science Intern at <a href="https://tech.facebook.com/reality-labs/" target="_blank">Meta Reality Labs</a>, where I worked on state-of-the-art Quest VR technology.
 			</p>
 		
 			<p>My journey into neuroscience began over a decade ago with the BrainBee competition in India, where a chapter on memory in the <a href="https://www.brainfacts.org/" target="_blank">BrainFacts</a> book sparked a lifelong fascination. 
@@ -96,7 +96,7 @@
 				As of now, my research goal is to bridge borders between the reductionist and holistic approaches and pursue this problem from a dynamical systems / control theory perspective. 
 			</p>
 		
-			<p>When not working with data or debugging code, I am probably out biking, hiking, playing chess, or learning some new skill that catches my attention. 
+			<p>When not working with data or debugging code, I am probably out running,biking, hiking, playing chess, or learning some new skill that catches my attention. 
 				I love thoughtful conversations, especially over good coffee, and I am always up for a long walk or a deep dive into a weird idea.
 			</p>
 		
