--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				As of now, my research goal is to bridge borders between the reductionist and holistic approaches and pursue this problem from a dynamical systems / control theory perspective. 
 			</p>
 		
-			<p>When not working with data or debugging code, I am probably out running,biking, hiking, playing chess, or learning some new skill that catches my attention. 
+			<p>When not working with data or debugging code, I am probably out <a href="https://www.strava.com/athletes/105376651" target="_blank">breaking some PRs</a> or learning some new skill that catches my attention. 
 				I love thoughtful conversations, especially over good coffee, and I am always up for a long walk or a deep dive into a weird idea.
 			</p>
 		
