--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
 				<h4>Working memory synchronizes oscillations within and across cortical areas <span class="pub-year">2025</span></h4>
 				<p class="venue"><i>Society for Neuroscience (SfN), San Diego, CA, USA</i></p>
 				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
-				<p class="status-upcoming"><i class="fas fa-clock"></i> Upcoming <span class="award-badge">SfN Trainee Professional Development Award (TPDA)</span></p>
+				<a href="docs/Dake_SfN2025_poster.pdf" target="_blank" class="link">
+					<i class="fas fa-file-pdf"></i> View Poster
+				</a>
+				<span class="award-badge">SfN Trainee Professional Development Award (TPDA)</span>
 			</div>
 
 			<div class="research-item">
