Update talk: Add authors to 'A tale of two cortices'

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
 
 			<div class="publication-card">
 				<h4>𝛽 oscillations synchronize visual and prefrontal cortices to bring about distributed working memory
-					<span class="pub-year">In Preparation</span></h4>
+					<span class="pub-year">In Preparation</span>
+				</h4>
 				<p class="authors"><strong>Dake M.</strong>, Dandekar S., Curtis C. E.</p>
 			</div>
 
@@ -169,6 +170,7 @@
 				</a>
 				<span class="award-badge">SfN Trainee Professional Development Award (TPDA)</span>
 			</div>
+
 
 			<div class="research-item">
 				<h4>Working memory synchronizes oscillations in visual cortex <span class="pub-year">2025</span></h4>
@@ -209,7 +211,8 @@
 						USA</i></p>
 				<p class="authors">Amar I., Avadhani K., Bajaj M., Balasubramanian D., Bhagat S., Chutani N.,
 					<strong>Dake M.</strong>, Khatri U., Krishna N., Jacob M., Mal S., Mohapatra O., Pal A., Saha D.,
-					Tripathy B., Mukherjee R., Rao B.J.</p>
+					Tripathy B., Mukherjee R., Rao B.J.
+				</p>
 				<a href="docs/igem_poster.pdf" target="_blank" class="link">
 					<i class="fas fa-file-pdf"></i> View Poster
 				</a>
@@ -217,6 +220,11 @@
 			</div>
 
 			<h3>Talks & Symposia</h3>
+			<div class="research-item">
+				<h4>A tale of two cortices <span class="pub-year">2025</span></h4>
+				<p class="venue"><i>NYU Dean’s Award for Research Communication Excellence</i></p>
+				<p class="authors"><strong>Dake M.</strong>, Curtis C. E.</p>
+			</div>
 			<div class="research-item">
 				<h4>Perturbing human V1 degrades the fidelity of visual working memory <span
 						class="pub-year">2024</span></h4>
