Update social icons: Add Google Scholar, rearrange layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700&display=swap">
 	<!-- Add icon library -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
@@ -59,12 +60,20 @@
 		</ul>
 
 		<div id="social-links">
-			<a href="mailto:mrugank.dake@nyu.edu" class="fa-solid fa-envelope" target="_blank" aria-label="Email"></a>
-			<a href="https://www.linkedin.com/in/mrugank-dake-71911113b/" class="fa-brands fa-linkedin" target="_blank"
-				aria-label="LinkedIn"></a>
-			<a href="https://twitter.com/the_memory_guy" class="fa-brands fa-twitter" target="_blank"
-				aria-label="Twitter"></a>
-			<a href="https://github.com/mindemory" class="fa-brands fa-github" target="_blank" aria-label="GitHub"></a>
+			<div class="social-row">
+				<a href="https://www.linkedin.com/in/mrugankdake/" class="fa-brands fa-linkedin" target="_blank"
+					aria-label="LinkedIn"></a>
+				<a href="https://twitter.com/the_memory_guy" class="fa-brands fa-twitter" target="_blank"
+					aria-label="Twitter"></a>
+			</div>
+			<div class="social-row">
+				<a href="mailto:mrugank.dake@nyu.edu" class="fa-solid fa-envelope" target="_blank"
+					aria-label="Email"></a>
+				<a href="https://scholar.google.com/citations?user=N_zOV7cAAAAJ&hl=en" class="ai ai-google-scholar"
+					target="_blank" aria-label="Google Scholar"></a>
+				<a href="https://github.com/mindemory" class="fa-brands fa-github" target="_blank"
+					aria-label="GitHub"></a>
+			</div>
 		</div>
 	</div>
 
