Update About Me: Add BCI vision section and link Resume

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
 				pursue this problem from a dynamical systems / control theory perspective.
 			</p>
 
+			<p>
+				Apart from interest in fundamental research of understanding how brains process and store information, I
+				am also interested in pushing the boundaries of current BCI technologies to make education and
+				learning more accessible, to enhance memories and accelerate knowledge accumulation in humans. This
+				should
+				help save the training time and cost, but also make the accessibility of prior knowledge more universal,
+				creating a sustainable and more rational human society, in the new world of high information density.
+			</p>
+
 			<p>When not working with data or debugging code, I am probably out <a
 					href="https://www.strava.com/athletes/105376651" target="_blank">breaking some PRs</a> or learning
 				some new skill that catches my attention.
@@ -133,7 +142,8 @@
 				deep dive into a weird idea.
 			</p>
 
-			<p>Check out my <a href="docs/MrugankDakeCV.pdf" target="_blank">CV</a> for more details.</p>
+			<p>Check out my <a href="docs/MrugankDakeCV.pdf" target="_blank">CV</a> and <a
+					href="docs/MrugankDakeResume.pdf" target="_blank">Resume</a> for more details.</p>
 		</section>
 
 
